--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,11 +1,17 @@
 #button-link {
     color: rgb(255, 255, 255);
     font-family: "Calibri";
-    font-size: 16px;
+    font-size: 24px;
     text-decoration: none;
 }
 
 .qr-buttons {
     background-color: white;
     color: rgb(55, 0, 255);
+}
+
+@media (max-width: 450px) {
+    #button-link {
+        font-size: 16px;
+    }
 }
