--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -15,7 +15,7 @@
 .pay-text {
     margin-left: 50px;
     margin-right: 50px;
-    font-family: "Candara";
+    font-family: "Candara", "calibri";
     font-size: 20px;
     color: white;
     text-align: center;
@@ -24,7 +24,7 @@
 #error-message {
     color: white;
     text-align: center;
-    font-family: "Calibri";
+    font-family: "Calibri", "calibri";
     font-size: 20px;
     font-weight: 100;
     padding-left: 3px;
