--- a/src/styles/apresentation.css
+++ b/src/styles/apresentation.css
@@ -2,7 +2,7 @@
     color: white;
     font-size: 75px;
     text-align: center;
-    font-family: "mean";
+    font-family: "mean", "calibri";
 }
 
 #image {
