--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,7 +6,7 @@
 }
 
 #footer-text {
-    font-family: "mean";
+    font-family: "mean", "calibri";
     font-size: 14px;
     color: rgb(255, 255, 255);
     margin-left: 5px;
