--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@
 .text {
     margin-right: 200px;
     margin-left: 200px;
-    font-family: "Candara";
+    font-family: "Candara", "calibri";
     font-weight: bold;
     font-size: 20px;
     color: rgb(230, 232, 255);
@@ -21,14 +21,14 @@
 
 .title {
     text-align: center;
-    font-family: "realocate";
+    font-family: "realocate", "calibri";
     font-size: 36px;
     color: aliceblue;
 }
 
 .gran-title {
     text-align: center;
-    font-family: "realocate";
+    font-family: "realocate", "calibri";
     font-size: 40px;
     color: rgb(255, 255, 255);
 }
@@ -72,7 +72,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 label {
     font-size: 20px;
-    font-family: "Candara";
+    font-family: "Candara", "calibri";
     color: white; 
     font-weight: bold;
 }
