--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,6 @@
 #link1 {
     color: white;
-    font-family: "Candara";
+    font-family: "Candara", "calibri";
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
@@ -12,7 +12,7 @@
 
 #link2 {
     color: white;
-    font-family: "Candara";
+    font-family: "Candara", "calibri";
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
