--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -1,6 +1,6 @@
 .sub-listas {
     color: rgb(255, 255, 255);
-    font-family: "realocate";
+    font-family: "realocate", "calibri";
     font-weight: bold;
     font-size: 35px;
     margin-left: 30%;
@@ -22,7 +22,7 @@
     margin-right: 35%;
     border-color: aliceblue;
     border-style: solid;
-    font-family: "Candara";
+    font-family: "Candara", "calibri";
     font-weight: bold;
     font-size: 20px;
     color: rgb(230, 232, 255);
