--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,6 +1,6 @@
 #button-link {
     color: rgb(255, 255, 255);
-    font-family: "Calibri";
+    font-family: "Catamaran";
     font-size: 24px;
     text-decoration: none;
 }
