--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -1,8 +1,8 @@
 .sub-listas {
     color: rgb(255, 255, 255);
-    font-family: "realocate", "calibri";
+    font-family: "Caveat", "calibri";
     font-weight: bold;
-    font-size: 35px;
+    font-size: 30px;
     margin-left: 30%;
 }
 
@@ -22,7 +22,7 @@
     margin-right: 35%;
     border-color: aliceblue;
     border-style: solid;
-    font-family: "Candara", "calibri";
+    font-family: "Catamaran", "calibri";
     font-weight: bold;
     font-size: 20px;
     color: rgb(230, 232, 255);
