--- a/src/styles/apresentation.css
+++ b/src/styles/apresentation.css
@@ -2,14 +2,15 @@
     color: white;
     font-size: 75px;
     text-align: center;
-    font-family: "mean", "calibri";
+    font-family: "Climate Crisis", "calibri";
 }
 
 #image {
-    background-image: url("meanfundo.jpeg");
+    background-image: url("assets/meanfundo.jpeg");
     background-size: cover;
     padding-top: 200px;
     padding-bottom: 40px;
+    opacity: 100%;
 }
 
 #ig-logo {
@@ -44,14 +45,14 @@
     }
     
     #ig-logo {
-        max-width: 30px;
-        max-height: 30px;
+        max-width: 40px;
+        max-height: 40px;
     }
     
     #wpp-logo {
         margin-left: 20px;
-        max-width: 30px;
-        max-height: 30px;
+        max-width: 40px;
+        max-height: 40px;
     }
     
     .house-img {
