--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,11 @@
-@font-face {
-    font-family: "mean";
-    src: url("TAN-NIMBUS.otf") format("opentype");
-}
-
-@font-face {
-    font-family: "realocate";
-    src: url("Reallocated.ttf") format("truetype");
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
 
 .text {
     margin-right: 200px;
     margin-left: 200px;
-    font-family: "Candara", "calibri";
+    font-family: "Catamaran", "calibri";
     font-weight: bold;
     font-size: 20px;
     color: rgb(230, 232, 255);
@@ -21,14 +14,16 @@
 
 .title {
     text-align: center;
-    font-family: "realocate", "calibri";
+    font-family: "Caveat", "calibri";
+    font-weight: bold;
     font-size: 36px;
     color: aliceblue;
 }
 
 .gran-title {
     text-align: center;
-    font-family: "realocate", "calibri";
+    font-family: "Caveat", "calibri";
+    font-weight: bold;
     font-size: 40px;
     color: rgb(255, 255, 255);
 }
@@ -36,7 +31,7 @@
 .sub {
     text-align: center;
     color: rgb(79, 60, 255);
-    font-family: "Calibri";
+    font-family: "Catamaran";
     font-weight: bold;
     font-size: 24px;
     margin: 15px;
@@ -72,7 +67,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 label {
     font-size: 20px;
-    font-family: "Candara", "calibri";
+    font-family: "Catamaran", "calibri";
     color: white; 
     font-weight: bold;
 }
@@ -90,7 +85,7 @@ button {
     border: 0;
     box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
     padding: 6px;
-    font-family: "Calibri";
+    font-family: "Catamaran";
     color: rgb(255, 255, 255);
     font-size: 24px;
     text-decoration: none;
@@ -145,3 +140,50 @@ button {
     }
 }
 
+@media (max-width: 375px) {
+
+    
+    .text {
+        margin-right: 40px;
+        margin-left: 40px;
+        font-size: 14px;
+    }
+    
+    .title {
+        font-size: 26px;
+    }
+    
+    .gran-title {
+        font-size: 24px;
+    }
+    
+    .sub {
+        font-size: 18px;
+    }
+
+    .space {
+        margin-bottom: 16px;
+    }
+
+    body {
+        margin: 0;
+    }
+    
+    li {
+        margin-left: 25%;
+    }
+    
+    label {
+        font-size: 14px;
+    }
+    
+    input {
+        width: 210px;
+        height: 20px;
+        font-size: 14px;
+    }
+    
+    button {
+        font-size: 16px;
+    }
+}
