--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -9,7 +9,7 @@
 .obs {
     color: rgba(255, 255, 255, 0.650);
     font-weight: 100;
-    font-family: calibri;
+    font-family: "Catamaran", "Calibri";
 }
 
 .pay-text {
@@ -39,8 +39,8 @@
 }
 
 #form-container {
-    background: rgb(53,0,152);
-    background: radial-gradient(circle, rgba(53,0,152,1) 20%, rgba(12,0,78,1) 98%);
+    background: rgb(89, 0, 255);
+    background: radial-gradient(circle, rgb(80, 0, 255) 0%, rgb(15, 0, 120) 98%);
     border-radius: 20px;
     padding-top: 30px;
     padding-bottom: 50px;
@@ -150,75 +150,8 @@
     #div-container {
         margin-bottom: 40px;
     }
-}
-
-@media (max-width: 450px) {
-    #phone {
-        width: 130px;
-    }
-    
-    #cpf {
-        width: 130px;
-    }
-
-    .pay-text {
-        margin-left: 10px;
-        margin-right: 10px;
-        font-size: 14px;
-    }
-    
-    #error-message {
-        font-size: 14px;
-    }
-    
-    #span-div {
-        margin-bottom: 30px;
-    }
-    
-    #form-container {
-        margin-left: 20px;
-        margin-right: 20px;
-        padding-top: 10px;
-        padding-bottom: 20px;
-    }
-    
-    #inputs-div {
-        display: block;
-        margin-bottom: 30px;
-    }
-     
-    #column1 {
-        margin-left: 12px;
-    }
-    
-    #column2 {
-        margin-left: 12px;
-    }
-    
-    .qr-elements {
-        margin-top: 30px;
-    }
-    
-    #description {
-        margin-bottom: 40px;
-    }
-    
-    #submit-button {
-        margin-bottom: 10px;
-    }
-
-    #first-title {
-        margin-top: 75px;
-    }
-
-    #div-container {
-        margin-bottom: 40px;
-    }
 
     .obs {
-        color: rgba(255, 255, 255, 0.650);
-        font-weight: 100;
-        font-family: calibri;
-        font-size: 14px;
+        font-size: 12px;
     }
 }
