--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -44,20 +44,26 @@
 @media (max-width: 450px) {
     #link1 {
         font-size: 18px;
-        margin-top: 20px;
-        margin-right: 50px;
+        margin-top: 15px;
+        margin-bottom: 5px;
+        margin-right: 25px;
+        font-size: 16px;
     }
 
     #link2 {
         font-size: 18px;
         font-weight: bold;
-        margin-top: 20px;
-        margin-right: 70px;
+        margin-top: 15px;
+        margin-bottom: 5px;
+        margin-right: 20px;
+        font-size: 16px;
     }
 
     #logo {
-        max-width: 40px;
-        max-height: 40px;
-        margin-left: 10px;
+        max-width: 50px;
+        max-height: 50px;
+        margin-left: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 }
