--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -11,11 +11,11 @@
 }
 
 #div-listas {
-    background: rgb(49,0,110);
-    background: radial-gradient(circle, rgb(34, 0, 112) 1%, rgba(1,0,4,1) 100%);
+    background: rgb(72,0,240);
+    background: radial-gradient(circle, rgba(72,0,240,1) 0%, rgb(14, 0, 48) 100%);
     padding-top: 30px;
     padding-bottom: 30px;
-    border-radius: 40px;
+    border-radius: 20px;
     margin-top: 40px;
     margin-bottom: 120px;
     margin-left: 35%;
@@ -39,11 +39,11 @@
 @media (max-width: 450px) {
     .sub-listas {
         font-size: 20px;
-        margin-left: 30%;
+        margin-left: 25%;
     }
     
     #bebidas {
-        margin-left: 30%;
+        margin-left: 20%;
     }
     
     #div-listas {
