--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -7,7 +7,7 @@
 }
 
 .obs {
-    color: rgba(255, 255, 255, 0.650);
+    color: rgba(255, 255, 255, 0.678);
     font-weight: 100;
     font-family: "Catamaran", "Calibri";
 }
@@ -24,7 +24,7 @@
 #error-message {
     color: white;
     text-align: center;
-    font-family: "Catamaran", "calibri";
+    font-family: "Roboto", "calibri";
     font-size: 20px;
     font-weight: 100;
     padding-left: 3px;
