--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 
 .text {
     margin-right: 200px;
@@ -26,6 +27,16 @@
     font-weight: bold;
     font-size: 40px;
     color: rgb(255, 255, 255);
+}
+
+.formal {
+    margin-right: 200px;
+    margin-left: 200px;
+    font-family: "Roboto", "calibri";
+    font-weight: bold;
+    font-size: 18px;
+    color: rgb(230, 232, 255);
+    text-align: center;
 }
 
 .sub {
@@ -115,6 +126,12 @@ button {
 
     .space {
         margin-bottom: 16px;
+    }
+
+    .formal {
+        margin-right: 40px;
+        margin-left: 40px;
+        font-size: 14px;
     }
 
     body {
